# kokoro-openai-server

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  run.sh
.github/workflows/: macos-arm64-compile.yml  release.yml
src/: api.rs  backend.rs  config.rs  error.rs  main.rs  runtime_assets.rs  streaming.rs  validation.rs
